<resources>
    <string name="app_name">Anarock</string>
    <string name="glad_to_see_you">Glad \nto see you!</string>
    <string name="enter_your_company_code">Please enter your \ncompany code and continue.</string>
    <string name="enter_company_code_here">Enter company code here</string>
    <string name="get_support_text">Trouble logging in? <font color="#143FFF">Get support</font></string>
    <string name="enter_a_valid_phone_number">Please enter a valid phone \nnumber to continue.</string>
    <string name="request_type">application/json; charset=utf-8</string>
    <string name="Success">Success</string>
    <string name="enter_verification_code">Please enter the verification code \nsent to your number.</string>
    <string name="didn_t_receive_code">Didn\'t receive code?</string>
    <string name="resend_code">Resend code</string>
    <string name="valid_num_error_msg">Enter a valid phone number</string>
    <string name="time_format_string">0:</string>
    <string name="date_format_after_call_module">hh:mm a</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="visit_proposed">Visit Proposed</string>
    <string name="follow_up">Follow Up</string>
    <string name="choose_event">CHOOSE EVENT</string>
    <string name="add_new_event">Add new event</string>
    <string name="face_2_face">Face 2 Face</string>
    <string name="event_type">EVENT TYPE</string>
    <string name="project">PROJECT</string>
    <string name="cp">CP</string>
    <string name="select_project">Select Project</string>
    <string name="search_cp">Search CP</string>
    <string name="search_lead_name">Search lead name</string>
    <string name="lead_phone_number">Enter lead phone number</string>
    <string name="date_time_hint"><![CDATA[Choose date & time for meeting]]></string>
    <string name="add_note_here">Add note here..</string>
    <string name="date_time_text"><![CDATA[DATE & TIME]]></string>
    <string name="set_reminder">SET REMINDER</string>
    <string name="five_mins">5 mins</string>
    <string name="twenty_mins">20 mins</string>
    <string name="one_hour">1 hour</string>
    <string name="thirty_mins">30 mins</string>
    <string name="two_hours">2 hours</string>
    <string name="choose_event_type">CHOOSE EVENT TYPE</string>
    <string name="email_support_template"> Hi Ravina Jain,
        \n\nVersion : 1.0\nDo not delete the above info
        \n\nI am unable to login, my registered email id and phone are as follows.
        \nRegistered email id :
        \nRegistered phone no :
    </string>
    <string name="enable_full_functionality">App requires permissions of call logs \nto enable full functionality.</string>
    <string name="permission_required">Permission \nRequired</string>
    <string name="grant_permissions">Grant permissions</string>

    <string name="install_sales_connect_text">Sales Connect enables full functionality of this app. You may have to allow installation of apps from unknown sources to install Sales Connect.</string>
    <string name="install_sales_connect">Install Sales Connect</string>
    <string name="install_now">Install Now</string>

    <string name="add_name"><font color="#143FFF">+ Add name</font></string>
    <string name="add_phone_number"><font color="#143FFF">+ Add number</font></string>
    <string name="add_email"><font color="#143FFF">+ Add email</font></string>
    <string name="add_firm_name"><font color="#143FFF">+ Add firm name</font></string>
    <string name="add_firm_address"><font color="#143FFF">+ Add firm address</font></string>
    <string name="add_firm_locality"><font color="#143FFF">+ Add firm locality</font></string>
    <string name="add_team_size"><font color="#143FFF">+ Add team size</font></string>
    <string name="add_orgn_type"><font color="#143FFF">+ Add organisation type</font></string>
    <string name="add_members"><font color="#143FFF">+ Add members</font></string>
    <string name="add_gst_number"><font color="#143FFF">+ Add GST number</font></string>
    <string name="add_rera_number"><font color="#143FFF">+ Add RERA number</font></string>
    <string name="add_nature_business"><font color="#143FFF">+ Add nature of business</font></string>
    <string name="add_area"><font color="#143FFF">+ Add area</font></string>
    <string name="add_partners"><font color="#143FFF">+ Add partners/directors</font></string>
    <string name="screen">screen</string>
    <string name="screen_proposed_name">proposed</string>
    <string name="connect_app_package">com.anarock.calls.debug</string>
    <string name="connect_app_broadcast_receiver">com.anarock.calls.CallsDetailsReceiver</string>
    <string name="call_details_event_action">com.anarock.broadcast.GET_CALLS_DETAILS_EVENT</string>
    <string name="since">since</string>
    <string name="delay_in_sec">delayMS</string>
    <string name="source_id">sourceId</string>
    <string name="app_package_name">com.anarock.cpsourcing</string>

</resources>
