<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="40dp"
        android:background="@android:color/white"
        tools:context=".fragments.PermissionsFragment">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/permission_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_permission_icn" />

            <TextView
                android:id="@+id/permission_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/permission_image"
                android:layout_marginTop="40dp"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/muli_bold"
                android:gravity="center"
                android:text="@string/permission_required"
                android:textColor="#1C2D41"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/permission_sub_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/permission_title"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/muli_regular"
                android:gravity="center"
                android:text="@string/enable_full_functionality"
                android:textColor="@color/light_blue_black"
                android:textSize="15sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/grant_permission"
                android:layout_width="192dp"
                android:layout_below="@+id/permission_sub_text"
                android:layout_height="64dp"
                android:layout_marginTop="40dp"
                android:layout_centerHorizontal="true"
                android:background="@color/blue"
                android:elevation="@dimen/_120dp"
                android:fontFamily="@font/muli_regular"
                android:padding="@dimen/_10dp"
                android:text="@string/grant_permissions"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_14dp"
                app:cornerRadius="@dimen/_30dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/install"
                android:layout_width="141dp"
                android:layout_below="@+id/permission_sub_text"
                android:layout_height="64dp"
                android:layout_marginTop="40dp"
                android:layout_centerHorizontal="true"
                android:background="@color/blue"
                android:elevation="@dimen/_120dp"
                android:fontFamily="@font/muli_regular"
                android:padding="@dimen/_10dp"
                android:text="@string/install_now"
                android:textAllCaps="false"
                android:visibility="visible"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_14dp"
                app:cornerRadius="@dimen/_30dp" />


        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>